[gd_scene load_steps=19 format=2]

[ext_resource path="res://characters/compa.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/layout/4.gd" type="Script" id=3]
[ext_resource path="res://shaders/GLES2 anim noise color.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Renders Buenos/5.png" type="Texture" id=5]
[ext_resource path="res://assets/Renders guarros/2b.png" type="Texture" id=6]

[sub_resource type="ArrayMesh" id=19]
resource_name = "complete_scenes_Cube093"
surfaces/0 = {
"aabb": AABB( -11.1283, -1, -8.57144, 14.0021, 2, 9.57145 ),
"array_data": PoolByteArray( 135, 13, 50, 193, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 0, 135, 13, 50, 193, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 48, 0, 52, 135, 13, 50, 193, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 127, 0, 54, 0, 60, 135, 13, 50, 193, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 135, 13, 50, 193, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 135, 13, 50, 193, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 135, 13, 50, 193, 0, 0, 128, 191, 158, 36, 9, 193, 127, 127, 0, 127, 0, 54, 0, 58, 135, 13, 50, 193, 0, 0, 128, 191, 158, 36, 9, 193, 0, 129, 127, 63, 0, 48, 0, 56, 135, 13, 50, 193, 0, 0, 128, 191, 158, 36, 9, 193, 129, 0, 0, 127, 0, 54, 0, 58, 135, 13, 50, 193, 0, 0, 128, 63, 158, 36, 9, 193, 127, 127, 0, 127, 0, 57, 0, 58, 135, 13, 50, 193, 0, 0, 128, 63, 158, 36, 9, 193, 0, 127, 129, 63, 0, 59, 0, 56, 135, 13, 50, 193, 0, 0, 128, 63, 158, 36, 9, 193, 129, 0, 0, 127, 0, 57, 0, 58, 172, 236, 55, 64, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 172, 236, 55, 64, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 172, 236, 55, 64, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 172, 236, 55, 64, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 172, 236, 55, 64, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 172, 236, 55, 64, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 172, 236, 55, 64, 0, 0, 128, 191, 158, 36, 9, 193, 127, 127, 0, 127, 0, 54, 0, 56, 172, 236, 55, 64, 0, 0, 128, 191, 158, 36, 9, 193, 0, 129, 127, 63, 0, 54, 0, 56, 172, 236, 55, 64, 0, 0, 128, 191, 158, 36, 9, 193, 127, 0, 0, 127, 0, 54, 0, 56, 172, 236, 55, 64, 0, 0, 128, 63, 158, 36, 9, 193, 127, 127, 0, 127, 0, 57, 0, 56, 172, 236, 55, 64, 0, 0, 128, 63, 158, 36, 9, 193, 0, 127, 129, 63, 0, 57, 0, 56, 172, 236, 55, 64, 0, 0, 128, 63, 158, 36, 9, 193, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 2, 0, 11, 0, 5, 0, 2, 0, 8, 0, 11, 0, 6, 0, 21, 0, 9, 0, 6, 0, 18, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 12, 0, 3, 0, 15, 0, 12, 0, 0, 0, 3, 0, 7, 0, 13, 0, 19, 0, 7, 0, 1, 0, 13, 0, 22, 0, 4, 0, 10, 0, 22, 0, 16, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=20]
resource_name = "complete_scenes_Cube095"
surfaces/0 = {
"aabb": AABB( -0.902961, -1, -1, 1.90296, 16.1978, 2.00001 ),
"array_data": PoolByteArray( 116, 40, 103, 191, 0, 0, 128, 191, 216, 255, 127, 63, 0, 0, 0, 127, 0, 54, 0, 0, 116, 40, 103, 191, 0, 0, 128, 191, 216, 255, 127, 63, 0, 129, 126, 63, 0, 48, 0, 52, 116, 40, 103, 191, 0, 0, 128, 191, 216, 255, 127, 63, 129, 0, 0, 127, 0, 54, 0, 60, 116, 40, 103, 191, 0, 0, 128, 63, 216, 255, 127, 63, 0, 0, 0, 127, 0, 57, 0, 0, 116, 40, 103, 191, 0, 0, 128, 63, 216, 255, 127, 63, 129, 0, 0, 127, 0, 57, 0, 60, 116, 40, 103, 191, 0, 0, 128, 191, 20, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 58, 116, 40, 103, 191, 0, 0, 128, 191, 20, 0, 128, 191, 0, 129, 126, 63, 0, 48, 0, 56, 116, 40, 103, 191, 0, 0, 128, 191, 20, 0, 128, 191, 129, 0, 0, 127, 0, 54, 0, 58, 116, 40, 103, 191, 0, 0, 128, 63, 20, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 116, 40, 103, 191, 0, 0, 128, 63, 20, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56, 133, 174, 135, 190, 0, 0, 128, 191, 251, 255, 127, 191, 127, 127, 0, 127, 0, 54, 203, 57, 133, 174, 135, 190, 0, 0, 128, 191, 251, 255, 127, 191, 0, 129, 126, 63, 210, 48, 0, 56, 133, 174, 135, 190, 0, 0, 128, 63, 251, 255, 127, 191, 127, 127, 0, 127, 0, 57, 203, 57, 133, 174, 135, 190, 0, 0, 128, 63, 251, 255, 127, 191, 0, 127, 127, 63, 0, 57, 203, 57, 133, 174, 135, 190, 0, 0, 128, 63, 251, 255, 127, 191, 127, 0, 127, 63, 0, 57, 203, 57, 133, 174, 135, 190, 0, 0, 128, 191, 2, 0, 128, 63, 0, 0, 0, 127, 0, 54, 144, 38, 133, 174, 135, 190, 0, 0, 128, 191, 2, 0, 128, 63, 0, 129, 126, 63, 210, 48, 0, 52, 133, 174, 135, 190, 0, 0, 128, 63, 2, 0, 128, 63, 0, 0, 0, 127, 0, 57, 144, 38, 133, 174, 135, 190, 0, 0, 128, 63, 2, 0, 128, 63, 0, 127, 127, 63, 0, 57, 144, 38, 133, 174, 135, 190, 0, 0, 128, 63, 2, 0, 128, 63, 127, 0, 127, 63, 0, 57, 144, 38, 159, 111, 220, 62, 0, 0, 128, 63, 252, 255, 127, 191, 127, 127, 0, 127, 0, 57, 229, 56, 159, 111, 220, 62, 0, 0, 128, 63, 252, 255, 127, 191, 0, 127, 127, 63, 0, 57, 229, 56, 159, 111, 220, 62, 0, 0, 128, 63, 252, 255, 127, 191, 129, 0, 127, 63, 0, 57, 229, 56, 159, 111, 220, 62, 0, 0, 128, 191, 1, 0, 128, 63, 0, 0, 0, 127, 0, 54, 105, 48, 159, 111, 220, 62, 0, 0, 128, 191, 1, 0, 128, 63, 0, 129, 127, 63, 52, 52, 0, 52, 159, 111, 220, 62, 0, 0, 128, 191, 252, 255, 127, 191, 127, 127, 0, 127, 0, 54, 229, 56, 159, 111, 220, 62, 0, 0, 128, 191, 252, 255, 127, 191, 0, 129, 127, 63, 52, 52, 0, 56, 159, 111, 220, 62, 0, 0, 128, 63, 1, 0, 128, 63, 0, 0, 0, 127, 0, 57, 105, 48, 159, 111, 220, 62, 0, 0, 128, 63, 1, 0, 128, 63, 0, 127, 127, 63, 0, 57, 105, 48, 159, 111, 220, 62, 0, 0, 128, 63, 1, 0, 128, 63, 129, 0, 127, 63, 0, 57, 105, 48, 116, 40, 103, 191, 26, 75, 204, 64, 216, 255, 127, 63, 0, 0, 127, 193, 0, 57, 0, 0, 116, 40, 103, 191, 26, 75, 204, 64, 216, 255, 127, 63, 129, 0, 127, 63, 0, 57, 0, 60, 116, 40, 103, 191, 26, 75, 204, 64, 20, 0, 128, 191, 127, 127, 127, 63, 0, 57, 0, 58, 116, 40, 103, 191, 26, 75, 204, 64, 20, 0, 128, 191, 129, 0, 127, 63, 0, 57, 0, 58, 159, 111, 220, 62, 26, 75, 204, 64, 252, 255, 127, 191, 127, 127, 127, 63, 0, 57, 229, 56, 159, 111, 220, 62, 26, 75, 204, 64, 252, 255, 127, 191, 140, 246, 127, 63, 0, 57, 229, 56, 159, 111, 220, 62, 26, 75, 204, 64, 252, 255, 127, 191, 129, 0, 127, 63, 0, 57, 229, 56, 0, 0, 128, 63, 26, 75, 204, 64, 0, 0, 128, 191, 127, 127, 127, 63, 0, 57, 0, 56, 0, 0, 128, 63, 26, 75, 204, 64, 0, 0, 128, 191, 127, 0, 127, 63, 0, 57, 0, 56, 0, 0, 128, 63, 26, 75, 204, 64, 0, 0, 128, 63, 0, 0, 127, 193, 0, 57, 0, 52, 0, 0, 128, 63, 26, 75, 204, 64, 0, 0, 128, 63, 127, 0, 127, 63, 0, 57, 0, 52, 133, 174, 135, 190, 26, 75, 204, 64, 2, 0, 128, 63, 0, 0, 127, 193, 0, 57, 144, 38, 133, 174, 135, 190, 26, 75, 204, 64, 2, 0, 128, 63, 116, 246, 127, 63, 0, 57, 144, 38, 133, 174, 135, 190, 26, 75, 204, 64, 2, 0, 128, 63, 127, 0, 127, 63, 0, 57, 144, 38, 133, 174, 135, 190, 26, 75, 204, 64, 251, 255, 127, 191, 127, 127, 127, 63, 0, 57, 203, 57, 133, 174, 135, 190, 26, 75, 204, 64, 251, 255, 127, 191, 116, 246, 127, 63, 0, 57, 203, 57, 133, 174, 135, 190, 26, 75, 204, 64, 251, 255, 127, 191, 127, 0, 127, 63, 0, 57, 203, 57, 159, 111, 220, 62, 26, 75, 204, 64, 1, 0, 128, 63, 0, 0, 127, 193, 0, 57, 105, 48, 159, 111, 220, 62, 26, 75, 204, 64, 1, 0, 128, 63, 140, 246, 127, 63, 0, 57, 105, 48, 159, 111, 220, 62, 26, 75, 204, 64, 1, 0, 128, 63, 129, 0, 127, 63, 0, 57, 105, 48, 116, 40, 103, 191, 82, 42, 115, 65, 216, 255, 127, 63, 0, 0, 127, 193, 0, 57, 0, 0, 116, 40, 103, 191, 82, 42, 115, 65, 216, 255, 127, 63, 0, 127, 129, 63, 0, 59, 0, 52, 116, 40, 103, 191, 82, 42, 115, 65, 216, 255, 127, 63, 129, 0, 127, 63, 0, 57, 0, 60, 116, 40, 103, 191, 82, 42, 115, 65, 20, 0, 128, 191, 127, 127, 127, 63, 0, 57, 0, 58, 116, 40, 103, 191, 82, 42, 115, 65, 20, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 116, 40, 103, 191, 82, 42, 115, 65, 20, 0, 128, 191, 129, 0, 127, 63, 0, 57, 0, 58, 159, 111, 220, 62, 82, 42, 115, 65, 252, 255, 127, 191, 127, 127, 127, 63, 0, 57, 229, 56, 159, 111, 220, 62, 82, 42, 115, 65, 252, 255, 127, 191, 0, 127, 130, 63, 229, 57, 0, 56, 0, 0, 128, 63, 82, 42, 115, 65, 0, 0, 128, 191, 127, 127, 127, 63, 0, 57, 0, 56, 0, 0, 128, 63, 82, 42, 115, 65, 0, 0, 128, 191, 0, 127, 130, 63, 0, 57, 0, 56, 0, 0, 128, 63, 82, 42, 115, 65, 0, 0, 128, 191, 127, 0, 127, 63, 0, 57, 0, 56, 0, 0, 128, 63, 82, 42, 115, 65, 0, 0, 128, 63, 0, 0, 127, 193, 0, 57, 0, 52, 0, 0, 128, 63, 82, 42, 115, 65, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 63, 82, 42, 115, 65, 0, 0, 128, 63, 127, 0, 127, 63, 0, 57, 0, 52, 133, 174, 135, 190, 82, 42, 115, 65, 2, 0, 128, 63, 0, 0, 127, 193, 0, 57, 144, 38, 133, 174, 135, 190, 82, 42, 115, 65, 2, 0, 128, 63, 0, 127, 129, 63, 203, 58, 0, 52, 133, 174, 135, 190, 82, 42, 115, 65, 251, 255, 127, 191, 127, 127, 127, 63, 0, 57, 203, 57, 133, 174, 135, 190, 82, 42, 115, 65, 251, 255, 127, 191, 0, 127, 129, 63, 203, 58, 0, 56, 159, 111, 220, 62, 82, 42, 115, 65, 1, 0, 128, 63, 0, 0, 127, 193, 0, 57, 105, 48, 159, 111, 220, 62, 82, 42, 115, 65, 1, 0, 128, 63, 0, 127, 130, 63, 229, 57, 0, 52, 208, 117, 75, 62, 190, 101, 14, 65, 2, 0, 128, 63, 0, 0, 127, 193, 0, 57, 109, 46, 208, 117, 75, 62, 190, 101, 14, 65, 2, 0, 128, 63, 0, 129, 127, 63, 0, 57, 109, 46, 208, 117, 75, 62, 190, 101, 14, 65, 2, 0, 128, 63, 140, 246, 127, 63, 0, 57, 109, 46, 112, 206, 7, 189, 190, 101, 14, 65, 2, 0, 128, 63, 0, 0, 127, 193, 0, 57, 8, 44, 112, 206, 7, 189, 190, 101, 14, 65, 2, 0, 128, 63, 0, 129, 127, 63, 0, 57, 8, 44, 112, 206, 7, 189, 190, 101, 14, 65, 2, 0, 128, 63, 116, 246, 127, 63, 0, 57, 8, 44, 104, 206, 7, 189, 190, 101, 14, 65, 252, 255, 127, 191, 127, 127, 127, 63, 0, 57, 126, 57, 104, 206, 7, 189, 190, 101, 14, 65, 252, 255, 127, 191, 0, 129, 127, 63, 0, 57, 126, 57, 104, 206, 7, 189, 190, 101, 14, 65, 252, 255, 127, 191, 116, 246, 127, 63, 0, 57, 126, 57, 210, 117, 75, 62, 190, 101, 14, 65, 252, 255, 127, 191, 127, 127, 127, 63, 0, 57, 50, 57, 210, 117, 75, 62, 190, 101, 14, 65, 252, 255, 127, 191, 0, 129, 127, 63, 0, 57, 50, 57, 210, 117, 75, 62, 190, 101, 14, 65, 252, 255, 127, 191, 140, 246, 127, 63, 0, 57, 50, 57, 208, 117, 75, 62, 82, 42, 115, 65, 2, 0, 128, 63, 0, 0, 127, 193, 0, 57, 109, 46, 208, 117, 75, 62, 82, 42, 115, 65, 2, 0, 128, 63, 0, 127, 130, 63, 50, 58, 0, 52, 112, 206, 7, 189, 82, 42, 115, 65, 2, 0, 128, 63, 0, 0, 127, 193, 0, 57, 8, 44, 112, 206, 7, 189, 82, 42, 115, 65, 2, 0, 128, 63, 0, 127, 129, 63, 126, 58, 0, 52, 104, 206, 7, 189, 82, 42, 115, 65, 252, 255, 127, 191, 127, 127, 127, 63, 0, 57, 126, 57, 104, 206, 7, 189, 82, 42, 115, 65, 252, 255, 127, 191, 0, 127, 130, 63, 126, 58, 0, 56, 210, 117, 75, 62, 82, 42, 115, 65, 252, 255, 127, 191, 127, 127, 127, 63, 0, 57, 50, 57, 210, 117, 75, 62, 82, 42, 115, 65, 252, 255, 127, 191, 0, 127, 129, 63, 50, 58, 0, 56 ),
"array_index_data": PoolByteArray( 2, 0, 9, 0, 4, 0, 2, 0, 7, 0, 9, 0, 35, 0, 18, 0, 30, 0, 35, 0, 15, 0, 18, 0, 17, 0, 14, 0, 19, 0, 17, 0, 12, 0, 14, 0, 25, 0, 3, 0, 27, 0, 25, 0, 0, 0, 3, 0, 36, 0, 11, 0, 16, 0, 36, 0, 34, 0, 11, 0, 18, 0, 44, 0, 30, 0, 18, 0, 47, 0, 44, 0, 91, 0, 58, 0, 45, 0, 91, 0, 82, 0, 58, 0, 6, 0, 26, 0, 21, 0, 6, 0, 1, 0, 26, 0, 33, 0, 27, 0, 37, 0, 33, 0, 25, 0, 27, 0, 5, 0, 22, 0, 8, 0, 5, 0, 20, 0, 22, 0, 10, 0, 37, 0, 13, 0, 10, 0, 33, 0, 37, 0, 3, 0, 51, 0, 27, 0, 3, 0, 40, 0, 51, 0, 21, 0, 34, 0, 36, 0, 21, 0, 26, 0, 34, 0, 20, 0, 30, 0, 22, 0, 20, 0, 35, 0, 30, 0, 47, 0, 66, 0, 44, 0, 47, 0, 68, 0, 66, 0, 40, 0, 74, 0, 51, 0, 40, 0, 60, 0, 74, 0, 80, 0, 78, 0, 57, 0, 80, 0, 92, 0, 78, 0, 37, 0, 49, 0, 13, 0, 37, 0, 57, 0, 49, 0, 14, 0, 48, 0, 19, 0, 14, 0, 50, 0, 48, 0, 24, 0, 53, 0, 56, 0, 24, 0, 29, 0, 53, 0, 22, 0, 42, 0, 8, 0, 22, 0, 54, 0, 42, 0, 9, 0, 41, 0, 4, 0, 9, 0, 43, 0, 41, 0, 77, 0, 61, 0, 64, 0, 77, 0, 75, 0, 61, 0, 97, 0, 75, 0, 77, 0, 97, 0, 95, 0, 75, 0, 69, 0, 79, 0, 67, 0, 69, 0, 72, 0, 79, 0, 57, 0, 71, 0, 49, 0, 57, 0, 78, 0, 71, 0, 54, 0, 63, 0, 42, 0, 54, 0, 76, 0, 63, 0, 50, 0, 70, 0, 48, 0, 50, 0, 73, 0, 70, 0, 43, 0, 62, 0, 41, 0, 43, 0, 65, 0, 62, 0, 86, 0, 76, 0, 54, 0, 86, 0, 96, 0, 76, 0, 46, 0, 39, 0, 32, 0, 46, 0, 59, 0, 39, 0, 31, 0, 28, 0, 23, 0, 31, 0, 38, 0, 28, 0, 44, 0, 98, 0, 89, 0, 44, 0, 66, 0, 98, 0, 89, 0, 96, 0, 86, 0, 89, 0, 98, 0, 96, 0, 67, 0, 93, 0, 99, 0, 67, 0, 79, 0, 93, 0, 99, 0, 95, 0, 97, 0, 99, 0, 93, 0, 95, 0, 51, 0, 94, 0, 83, 0, 51, 0, 74, 0, 94, 0, 83, 0, 92, 0, 80, 0, 83, 0, 94, 0, 92, 0, 55, 0, 85, 0, 88, 0, 55, 0, 52, 0, 85, 0, 87, 0, 81, 0, 90, 0, 87, 0, 84, 0, 81, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 240,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 100
}

[sub_resource type="ArrayMesh" id=21]
resource_name = "complete_scenes_Cube098"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 2, 0, 11, 0, 5, 0, 2, 0, 8, 0, 11, 0, 6, 0, 21, 0, 9, 0, 6, 0, 18, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 12, 0, 3, 0, 15, 0, 12, 0, 0, 0, 3, 0, 7, 0, 13, 0, 19, 0, 7, 0, 1, 0, 13, 0, 22, 0, 4, 0, 10, 0, 22, 0, 16, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=22]
resource_name = "complete_scenes_Cube099"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 2, 0, 11, 0, 5, 0, 2, 0, 8, 0, 11, 0, 6, 0, 21, 0, 9, 0, 6, 0, 18, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 12, 0, 3, 0, 15, 0, 12, 0, 0, 0, 3, 0, 7, 0, 13, 0, 19, 0, 7, 0, 1, 0, 13, 0, 22, 0, 4, 0, 10, 0, 22, 0, 16, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=23]
resource_name = "complete_scenes_Cube042"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 2, 0, 11, 0, 5, 0, 2, 0, 8, 0, 11, 0, 6, 0, 21, 0, 9, 0, 6, 0, 18, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 12, 0, 3, 0, 15, 0, 12, 0, 0, 0, 3, 0, 7, 0, 13, 0, 19, 0, 7, 0, 1, 0, 13, 0, 22, 0, 4, 0, 10, 0, 22, 0, 16, 0, 4, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="CubeMesh" id=1]
size = Vector3( 49.701, 0.338, 116.624 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0.713726, 0.713726, 1 )

[sub_resource type="ConcavePolygonShape" id=17]
data = PoolVector3Array( -19.539, 0.169, 15.678, 19.539, 0.169, 15.678, -19.539, -0.169, 15.678, 19.539, 0.169, 15.678, 19.539, -0.169, 15.678, -19.539, -0.169, 15.678, 19.539, 0.169, -15.678, -19.539, 0.169, -15.678, 19.539, -0.169, -15.678, -19.539, 0.169, -15.678, -19.539, -0.169, -15.678, 19.539, -0.169, -15.678, 19.539, 0.169, 15.678, 19.539, 0.169, -15.678, 19.539, -0.169, 15.678, 19.539, 0.169, -15.678, 19.539, -0.169, -15.678, 19.539, -0.169, 15.678, -19.539, 0.169, -15.678, -19.539, 0.169, 15.678, -19.539, -0.169, -15.678, -19.539, 0.169, 15.678, -19.539, -0.169, 15.678, -19.539, -0.169, -15.678, 19.539, 0.169, 15.678, -19.539, 0.169, 15.678, 19.539, 0.169, -15.678, -19.539, 0.169, 15.678, -19.539, 0.169, -15.678, 19.539, 0.169, -15.678, -19.539, -0.169, 15.678, 19.539, -0.169, 15.678, -19.539, -0.169, -15.678, 19.539, -0.169, 15.678, 19.539, -0.169, -15.678, -19.539, -0.169, -15.678 )

[sub_resource type="CubeMesh" id=24]
size = Vector3( 5, 0.3, 10 )

[sub_resource type="ConcavePolygonShape" id=25]
data = PoolVector3Array( -2.5, 0.15, 5, 2.5, 0.15, 5, -2.5, -0.15, 5, 2.5, 0.15, 5, 2.5, -0.15, 5, -2.5, -0.15, 5, 2.5, 0.15, -5, -2.5, 0.15, -5, 2.5, -0.15, -5, -2.5, 0.15, -5, -2.5, -0.15, -5, 2.5, -0.15, -5, 2.5, 0.15, 5, 2.5, 0.15, -5, 2.5, -0.15, 5, 2.5, 0.15, -5, 2.5, -0.15, -5, 2.5, -0.15, 5, -2.5, 0.15, -5, -2.5, 0.15, 5, -2.5, -0.15, -5, -2.5, 0.15, 5, -2.5, -0.15, 5, -2.5, -0.15, -5, 2.5, 0.15, 5, -2.5, 0.15, 5, 2.5, 0.15, -5, -2.5, 0.15, 5, -2.5, 0.15, -5, 2.5, 0.15, -5, -2.5, -0.15, 5, 2.5, -0.15, 5, -2.5, -0.15, -5, 2.5, -0.15, 5, 2.5, -0.15, -5, -2.5, -0.15, -5 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 3.678, 2, 2 )

[sub_resource type="BoxShape" id=18]
extents = Vector3( 1.621, 1, 1 )

[node name="room" type="Spatial"]
script = ExtResource( 3 )

[node name="GLES2 anim noise color" parent="." instance=ExtResource( 4 )]
visible = false

[node name="player" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.999966, 0, 0.00827287, 0, 1, 0, -0.00827287, 0, -0.999966, -1.36881, 0.537034, -8.97394 )

[node name="compa" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.989561, 0, -0.144114, 0, 1, 0, 0.144114, 0, -0.989561, -1.70351, 0.64144, -9.25404 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, -2.50999e-08, 8.37421e-08, 0, 0.957898, 0.28711, -8.74228e-08, 0.28711, -0.957898, -0.946164, 6.16412, -30.3041 )
fov = 22.2

[node name="Sprite3D" type="Sprite3D" parent="Camera"]
transform = Transform( 1.316, 0, 0, 0, 1.316, 0, 0, 0, 1, 0, 0, -35.676 )
texture = ExtResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="Camera"]
transform = Transform( 2.618, 2.56923e-09, -3.14039e-08, -2.56923e-09, 2.618, -1.96275e-09, 8.22155e-08, 5.13847e-09, 1, 2.86102e-06, 0.00299966, -24.144 )
visible = false
modulate = Color( 0.811765, 0.815686, 0.682353, 1 )
texture = ExtResource( 6 )

[node name="escenario" type="Spatial" parent="."]
visible = false

[node name="casa" type="StaticBody" parent="escenario"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.976977, 0.277332, -6.70632 )

[node name="Cube035" type="MeshInstance" parent="escenario/casa"]
transform = Transform( 1, 0, 0, 0, 0.0893467, 0, 0, 0, 1.91341, 3.14584, -0.061407, 12.1064 )
mesh = SubResource( 19 )

[node name="Cube084" type="MeshInstance" parent="escenario/casa"]
transform = Transform( 5.0147, 0, 0, 0, 0.46093, 0, 0, 0, 0.238134, -0.37219, -0.464745, -5.06598 )
mesh = SubResource( 20 )

[node name="Cube087" type="MeshInstance" parent="escenario/casa"]
transform = Transform( 0.22269, 0, 0, 0, 9.18055, 0, 0, 0, 9.42373, 3.25015, 0.0317707, 4.47157 )
mesh = SubResource( 21 )

[node name="Cube088" type="MeshInstance" parent="escenario/casa"]
transform = Transform( 0.22269, 0, 0, 0, 9.18055, 0, 0, 0, 9.42373, -3.36602, 0.0317707, 4.47157 )
mesh = SubResource( 22 )

[node name="Cube108" type="MeshInstance" parent="escenario/casa"]
transform = Transform( -0.1, -4.11838e-09, -5.836e-09, 4.11838e-09, 0.0335121, -0.0942175, 5.836e-09, -0.0942175, -0.0335121, 0.0647752, 3.09548, 10.8955 )
mesh = SubResource( 23 )

[node name="CSGBox" type="CSGBox" parent="escenario/casa"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.77539, 0, 4.76837e-07 )
use_collision = true
depth = 27.7374

[node name="CSGBox2" type="CSGBox" parent="escenario/casa"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.73981, 0, 1.43051e-06 )
use_collision = true
depth = 27.7374

[node name="floor" type="StaticBody" parent="escenario"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.224, 0.0489674, -13.209 )

[node name="MeshInstance" type="MeshInstance" parent="escenario/floor"]
mesh = SubResource( 1 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="escenario/floor"]
shape = SubResource( 17 )

[node name="MeshInstance2" type="MeshInstance" parent="escenario/floor"]
transform = Transform( 1, 0, 0, 0, 0.779152, 0.626835, 0, -0.626835, 0.779152, 0, 1.68741, 13.9888 )
mesh = SubResource( 24 )

[node name="CollisionShape2" type="CollisionShape" parent="escenario/floor"]
transform = Transform( 1, 0, 0, 0, 0.779152, 0.626835, 0, -0.626835, 0.779152, 0, 1.68741, 13.9888 )
shape = SubResource( 25 )

[node name="Puerta3" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.069, 1.85566, -1.07208 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Puerta3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.250858 )
mesh = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Puerta3"]
shape = SubResource( 18 )

[node name="Puerta5" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.069, 1.70188, -18.6666 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Puerta5"]
mesh = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Puerta5"]
shape = SubResource( 18 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 467.0
margin_top = 101.0
margin_right = 569.0
margin_bottom = 141.0
text = "ROOM 2"

[node name="playerspawn3" type="Position3D" parent="."]
transform = Transform( 0.997163, -0.000697612, 0.0752715, 0, 0.999957, 0.00926757, -0.0752741, -0.00924127, 0.99712, -0.675592, 0.688907, -3.69917 )

[node name="compaspawn3" type="Position3D" parent="."]
transform = Transform( 0.999888, 0, 0.0150267, 0, 1, 0, -0.0150267, 0, 0.999888, -0.71896, 0.688907, -3.0029 )

[node name="playerspawn5" type="Position3D" parent="."]
transform = Transform( -0.999992, -3.83342e-05, 0.00413608, 0, 0.999957, 0.00926757, -0.00413685, 0.00926749, -0.999948, -0.746533, 0.688907, -16.0646 )

[node name="compaspawn5" type="Position3D" parent="."]
transform = Transform( -0.997924, 0, 0.0644104, 0, 1, 0, -0.0644104, 0, -0.997924, -0.648019, 0.688907, -16.7552 )

[connection signal="body_entered" from="Puerta3" to="." method="_on_Puerta3_body_entered"]
[connection signal="body_entered" from="Puerta5" to="." method="_on_Puerta5_body_entered"]
